# bionexus-co-scientists

./: .gitignore  ARCHITECTURE.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md  TAILSCALE.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  debate.py  generator.py  orchestrator.py  ranker.py  validator.py
backend/app/api/: hypotheses.py  papers.py  websocket.py
backend/app/arxiv/: __init__.py  client.py  downloader.py  parser.py
backend/app/clustering/: __init__.py  evaluator.py  kmeans.py
backend/app/core/: cache.py  config.py  exceptions.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  agent.py  hypothesis.py  paper.py
backend/app/rag/: __init__.py  embeddings.py  graph_rag.py  retrieval.py  vector_store.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agents.py  test_arxiv.py  test_cache.py  test_clustering.py  test_models.py  test_rag.py
frontend/: .env.example  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/hypotheses/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/components/charts/: ClusterVisualization.tsx  HypothesisScoreChart.tsx
infra/docker/: docker-compose.yml
infra/podman/: README.md
